<resources>
    <string name="app_name">Instagram</string>
    <string name="login_hint_email">Número de telefone, email ou nome de usuário</string>
    <string name="login_hint_password">Senha</string>
    <string name="Enter">Entrar</string>
    <string name="ou">OU</string>
    <string name="aviso">Esqueceu seus dados de login? obtenha ajuda para entrar</string>

    <string name="facebook_app_id">297217380953057</string>
    <string name="fb_login_protocol_scheme">fb297217380953057</string>
    <string name="facebook_client_token">56789</string>
    <string name="cadastre_se">Não tem uma conta ? <b> Cadastre-se</b></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="proxima">Proximo</string>
    <string name="alreadyaccount">Já tem uma conta ? <b>Faça o Login</b> </string>
    <string name="nome">nome</string>
    <string name="confirm_password">Confirmar senha</string>
    <string name="agree_terms_policy">Ao clicar em avançar, voce pode concordar com nossos termos, politica de dados e politica de cookies</string>
    <string name="welcome_instagram"><b>Bem vindo ao instagram,\n%1$s</b>\n Encontre pessoas para seguir e comece a compartilhar fotos. voce pode alterar seu nome de usuario a qualquer momento></string>
    <string name="title_photo_profile">Adicione foto do perfil</string>
    <string name="subtitle_photo_profile">Adicione uma foto para que seus amigos saibam que é voce </string>
    <string name="add_photo">Adicionar foto</string>
    <string name="jump">Pular</string>
    <string name="define_photo">Definir uma foto para o perfil</string>
    <string name="photo">Foto</string>
    <string name="galery">Galeria</string>
    <string name="menu_home">Home</string>
    <string name="menu_search">Buscar</string>
    <string name="add_publish">publicar\n</string>
    <string name="reels">reels</string>
    <string name="profile">profile\n</string>
    <string name="menu_publish">publicar</string>
    <string name="menu_reels">Reels</string>
    <string name="menu_profile">Perfil</string>
    <string name="publica_es">Publicações</string>
    <string name="followers">Seguidores</string>
    <string name="following">seguindo</string>
    <string name="edit_profile">Editar perfil</string>
    <string name="username">Username</string>
    <string name="bio">ola mundo</string>
    <string name="invalidEmail">Email invalido!</string>
    <string name="invalidpassowrd">senha deve ter ao menos 8 caracteres</string>
    <string name="name_invalid">Nome invalido</string>
    <string name="password_diferent">as Senhas sao diferentes</string>
    <string name="save">Salvar</string>
    <string name="cancel">Cancelar</string>
    <string name="nenhum_registo_encontrado">Nenhum registo encontrado</string>
    <string name="gallery">Galeria</string>
    <string name="Fotos">Fotos</string>
</resources>