<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation_graph"
    app:startDestination="@id/nav_home">
    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.instagram.home.view.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/nav_search"
        android:name="com.example.instagram.home.view.SearchFragment"
        android:label="@string/menu_search"
        tools:layout="@layout/fragment_search" />
    <fragment
        android:id="@+id/nav_publish"
        android:name="com.example.instagram.home.view.PublishFragment"
        android:label="@string/menu_publish"
        tools:layout="@layout/fragment_publish" />
    <fragment
        android:id="@+id/nav_reels"
        android:name="com.example.instagram.home.view.ReelsFragment"
        android:label="@string/menu_reels"
        tools:layout="@layout/fragment_reels" />
    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.instagram.profile.view.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>