<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:context=".view.login.LoginActivity">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginBottom="48dp"
            android:contentDescription="@null"
            android:src="@drawable/insta_logo" />

        <EditText
            android:id="@+id/login_edit_email"
            style="@style/Theme.Instagram.FormEditText"
            android:autofillHints="@null"
            android:hint="@string/login_hint_email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/login_edit_password"
            style="@style/Theme.Instagram.FormEditText"
            android:autofillHints="@null"
            android:hint="@string/login_hint_password"

            android:inputType="textPassword" />

        <Button
            android:id="@+id/login_btn_enter"
            style="@style/Theme.Instagram.Button"
            android:text="@string/Enter" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="5dp"
            android:text="@string/aviso"
            android:textColor="@color/gray_text"
            android:textSize="12sp" />

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <View
                style="@style/Theme.Instagram.Container"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_gravity="center"
                android:background="@color/gray_border" />

            <TextView
                style="@style/Theme.Instagram.TextBase"
                android:layout_gravity="center"
                android:background="@color/white"
                android:padding="6dp"
                android:text="@string/ou" />
        </FrameLayout>

        <com.facebook.login.widget.LoginButton
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="30dp"
            android:textSize="15sp"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="30dp" />


    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/login_txt_register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@color/gray_border" />

    <TextView
        android:id="@+id/login_txt_register"
        style="@style/Theme.Instagram.TextBase"
        android:layout_width="0dp"
        android:text="@string/cadastre_se"
        android:textSize="12sp"
        android:textAlignment="center"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>