<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical"
            android:paddingBottom="70dp"
            tools:context=".view.login.LoginActivity">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="48dp"
                android:contentDescription="@null"
                android:src="@drawable/baseline_person_add_24" />

            <TextView
                style="@style/Theme.Instagram.TextBase.form"
                android:layout_gravity="center"
                android:text="@string/title_photo_profile"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <TextView
                style="@style/Theme.Instagram.TextBase.form"

                android:layout_gravity="center"
                android:text="@string/subtitle_photo_profile" />


            <com.example.instagram.login.view.LoadingButton
                android:id="@+id/register_btn_next"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:text="@string/add_photo" />

            <Button
                android:id="@+id/register_btn_jump"
                style="@style/Theme.Instagram.link"
                android:text="@string/jump" />


        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>