<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical"
            android:paddingBottom="70dp"
            tools:context=".view.login.LoginActivity">

            <TextView
                style="@style/Theme.Instagram.TextBase.form"
                android:id="@+id/txt_welcome"
                android:text="@string/welcome_instagram" />

            <com.example.instagram.login.view.LoadingButton
                android:id="@+id/register_btn_next"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:text="@string/proxima" />

        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/register_txt_terms"
        style="@style/Theme.Instagram.TextBase"
        android:layout_width="0dp"
        android:padding="16dp"
        android:text="@string/agree_terms_policy"
        android:textAlignment="center"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>