<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical"
            android:paddingBottom="70dp"
            tools:context=".view.login.LoginActivity">


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/register_edit_name_input"
                style="@style/Theme.Instagram.FormEditTextInput"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/register_name"
                    style="@style/Theme.Instagram.FormEditText"
                    android:autofillHints="@null"
                    android:hint="@string/nome"
                    android:inputType="textPersonName" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/register_edit_password_input"
                style="@style/Theme.Instagram.FormEditTextInput"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/register_password"
                    style="@style/Theme.Instagram.FormEditText"
                    android:autofillHints="@null"
                    android:hint="@string/login_hint_password"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/register_edit_confirm_input"
                style="@style/Theme.Instagram.FormEditTextInput"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/register_confirm_password"
                    style="@style/Theme.Instagram.FormEditText"
                    android:autofillHints="@null"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.example.instagram.login.view.LoadingButton
                android:id="@+id/register_name_btn_next"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:text="@string/proxima" />

        </LinearLayout>
    </ScrollView>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_gravity="center"
        android:background="@color/gray_border"
        app:layout_constraintBottom_toTopOf="@+id/register_txt_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/register_txt_login"
        style="@style/Theme.Instagram.TextBase"
        android:layout_width="0dp"
        android:padding="16dp"
        android:text="@string/alreadyaccount"
        android:textAlignment="center"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>